--- a/styles.css
+++ b/styles.css
@@ -150,6 +150,18 @@ h1 {
     vertical-align: middle;
 }
 
+.collapse-metadata-header{
+    cursor: pointer;
+}
+
+.collapse-metadata-icon {
+    font-size: 0.7em;
+}
+
+.metadata-section-collapsed {
+    display: none;
+}
+
 .bulk-actions button {
     margin-bottom: 0.5em;
     margin-right: 0.5em;
