--- a/styles.css
+++ b/styles.css
@@ -202,6 +202,11 @@ h1 {
     vertical-align: middle;
 }
 
+.cover-preview{
+    width: 300px;
+    display: block;
+}
+
 .collapse-metadata-header {
     cursor: pointer;
 }
