--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,11 @@ h1 {
     margin-bottom: 1em;
 }
 
+.bind-to-ebook,
+.bind-to-pdf {
+    margin-left: 1em;
+}
+
 .binder-tooltip-helper {
     display: inline-flex;
     align-items: center;
