--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,6 @@
     }
 }
 
-
 /* style and interface */
 
 :root {
@@ -25,11 +24,6 @@ section {
 
 p {
     line-height: 22px;
-}
-
-h1 {
-    font-size: 24px;
-    margin-top: 0;
 }
 
 @media screen {
@@ -50,15 +44,45 @@ h1 {
 
 }
 
-.metadata-explanation {
-    font-size: 0.8em;
-    color: red;
-    margin-bottom: 1em;
+h1.title {
+    font-size: 300%;
+    margin-top: 0;
+    text-align: center;
+}
+
+.action-buttons {
+    text-align: center;
 }
 
 .bind-to-ebook,
 .bind-to-pdf {
-    margin-left: 1em;
+    margin: 0.5em;
+    padding: 1em;
+    font-size: 200%;
+    cursor: pointer;
+}
+
+.binder-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.modal-content {
+    flex: 0 0 400px;
+    margin: 3em auto 0;
+}
+
+.ebook-preview {
+    flex: 0 0 500px;
+    margin: 3em auto 0;
+}
+
+.metadata-explanation {
+    font-size: 0.8em;
+    color: red;
+    margin-bottom: 1em;
 }
 
 .binder-tooltip-helper {
@@ -80,33 +104,31 @@ h1 {
     background-color: #5a5a5a;
 }
 
-.ebook-preview {
-    float: right;
-}
-
-@media (max-width: 800px) {
-    .ebook-preview {
-        float: none;
-        margin-bottom: 3em;
-    }
-}
-
 .phone-frame {
     width: 450px;
     height: 800px;
     background-color: black;
     border: 20px solid black;
     border-radius: 40px;
-    padding-top: 50px;
+    padding-top: 0px;
     padding-bottom: 50px;
     text-align: center;
 }
 
+.reading-progress {
+    line-height: 60px;
+}
+
 #ebook-preview-render {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 60px);
     background-color: white;
     text-align: center;
+    border-radius: 13px;
+}
+
+.epub-container {
+    border-radius: 10px;
 }
 
 .phone-toolbar {
@@ -220,7 +242,7 @@ h1 {
     font-size: 0.7em;
 }
 
-.metadata-section-collapsed {
+.section-collapsed {
     display: none;
 }
 
@@ -240,6 +262,7 @@ h1 {
     border: 1px solid #2a2a2a;
     background-color: #2a2a2a;
     padding: 0.4em;
+    width: 100%;
 }
 
 .select-cover {
