--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,3 @@
-@media print {
-    @page {
-        size: 5in 5in;
-        margin-top: 1in;
-        margin-right: 1in;
-        margin-bottom: 1in;
-        margin-left: 1in;
-
-        @bottom-left {
-            content: counter(page);
-        }
-    }
-}
-
-/* style and interface */
-
 :root {
     font-size: 18px;
 }
@@ -26,28 +10,11 @@ p {
     line-height: 22px;
 }
 
-@media screen {
-
-    body {
-        background-color: whitesmoke;
-    }
-
-    .pagedjs_page {
-        background-color: white;
-        box-shadow: 0 0 0 1px #bfbfbf;
-        size: 4in 4in;
-        margin-top: 60px;
-        margin-right: 100px;
-        margin-bottom: 80px;
-        margin-left: 20mm;
-    }
-
-}
-
 h1.title {
-    font-size: 300%;
+    font-size: 400%;
     margin-top: 0;
     text-align: center;
+    text-transform: uppercase;
 }
 
 .action-buttons {
