--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ h1.title {
     align-items: flex-start;
 }
 
-.modal-content {
+.binder-section-content {
     flex: 0 0 400px;
     margin: 2em;
 }
@@ -268,7 +268,7 @@ h1.title {
 }
 
 section.binder-chapter {
-    overflow: hidden;
+    display: none;
 }
 
 .hidden {
